ubble-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ubble-backend
  name: ubble-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: ubble-backend
