ubble-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ubble-frontend
  name: ubble-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ubble-frontend
