ubble-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubble-backend
spec:
  ingressClassName: nginx
  rules:
    - host: verification.cfpay.nc
      http:
        paths:
          - backend:
              service:
                name: ubble-backend
                port:
                  number: 80
            path: /api
            pathType: Prefix
