ubble-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubble-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: verification.cfpay.nc
      http:
        paths:
          - backend:
              service:
                name: ubble-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
